2011-10-25  Kaz Kylheku  <kaz@kylheku.com>

	* configure: put in set -u to trap unbound variables, 
	and fixed resulting errors that were found.

2011-10-25  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (filter_s): New symbol variable.
	(v_filter): New function.
	(syms_init): New symbol variable initialized.
	(dir_tables_init): New function entered into table.

	* txr.1: Documented new filter directive.

2011-10-25  Kaz Kylheku  <kaz@kylheku.com>

	dep.mk: Regenerated.

2011-10-25  Kaz Kylheku  <kaz@kylheku.com>

	Shorthand for filters which map multiple texts to a common
	replacement text.

	* filter.c (build_filter_from_list): Allow tuples to denote
	multiple keys mapping to the same value.

	* lib.c (do_curry_123_2, do_curry_123_1): New static functions.
	(curry_123_2, curry_123_1): New functions.

	* lib.h (curry_123_2, curry_123_1): New functions declared.

	* match.c (v_deffilter): Allow tuples of strings rather than
	just pairs.

	* txr.1: Updated.

2011-10-25  Kaz Kylheku  <kaz@kylheku.com>

	* parser.y: Remove mention of nonexistent terminal \\ 
	from %right associativity clause.

2011-10-25  Kaz Kylheku  <kaz@kylheku.com>

	* filter.c (fun_k): New keyword variable.
	(function_filter): Use :fun keyword symbol instead of fun.
	(filter_init): New keyword variable initialized.

	* filter.h (upcase_k, downcase_k, fun_k): Declared.

	* txr.1: Updated.

2011-10-25  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (v_bind): Use sem_error to throw errors with line number
	info.

2011-10-24  Kaz Kylheku  <kaz@kylheku.com>

	Bugs #34641, #34629.

	* lib.c (search_str_tree): If multiple strings from the needle tree
	matching within within the haystack string, then take the leftmost
	match. If there are multiple matches at the same leftmost position,
	take the longest one.

2011-10-24  Kaz Kylheku  <kaz@kylheku.com>

	* filter.c (function_filter): New function.
	(get_filter): Handle (fun ...) syntax.

	* match.c (v_bind): Establish dynamic environment frame around